--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@types/node": "^10.9.4",
     "gulp": "^3.9.1",
     "gulp-sourcemaps": "^2.6.4",
+    "gulp-tslint": "^8.1.3",
     "gulp-typescript": "^5.0.0-alpha.3",
     "nodemon": "^1.18.4",
     "ts-node": "^7.0.1",
+    "tslint": "^5.11.0",
     "typescript": "^3.0.3"
   }
 }
