--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
   },
   "homepage": "https://github.com/vglushko/nest-sample#readme",
   "devDependencies": {
+    "@types/jasmine": "^2.8.8",
     "@types/node": "^10.9.4",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-jasmine": "^4.0.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-tslint": "^8.1.3",
     "gulp-typescript": "^5.0.0-alpha.3",
+    "jasmine": "^3.2.0",
     "nodemon": "^1.18.4",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
